--- a/SendIT/src/app/components/navbar/navbar.component.html
+++ b/SendIT/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,9 @@
 <div class="navbar">
+  <div class="logo">SendIT</div>
 
+  <div class="navbar_auth">
+    <button class="signup"><a routerLink="/auth/register">SignUp</a></button>
 
-    <div class="logo">
-
-
-        SendIT
-
-    </div>
-
-
-
-    <div class="navbar_auth">
-
-        <button class="signup"> <a routerLink="/auth/register">SignUp</a> </button>
-
-        <span class="login"><a routerLink="/auth/login">Login</a></span>
-    </div>
+    <span class="login"><a routerLink="/auth/login">Login</a></span>
+  </div>
 </div>
