--- a/SendIT/src/app/auth/login/login.component.css
+++ b/SendIT/src/app/auth/login/login.component.css
@@ -1,212 +1,176 @@
-.login{
-
-
-    display: flex;
-
-   
-
-    
+.login {
+  display: flex;
 }
 
-.image{
-
-    flex: 1;
+.image {
+  flex: 1;
 }
 
-.login-form{
+.login-form {
+  flex: 1;
 
-    flex: 1;
+  background-color: #82d78a;
 
-    background-color: #82D78A;
+  margin: 50px;
 
+  height: 500px;
 
-    margin: 50px;
+  width: 500px;
 
-    height: 500px;
-
-    width: 500px;
-
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
-form{
-
-    margin-top: 50px;
+form {
+  margin-top: 50px;
 }
 
-label{
+label {
+  margin: 30px;
 
-    margin: 30px;
+  display: block;
 
-    display: block;
-
-    color: #fff;
+  color: #fff;
 }
 
-.login-form input{
+.login-form input {
+  margin-left: 100px;
 
-    margin-left: 100px;
+  display: block;
 
-    display: block;
+  padding: 10px;
 
-    padding: 10px;
+  width: 300px;
 
-    width: 300px;
+  border: none;
 
-    border: none;
-
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
-.login-form button{
-
-
+.login-form button {
   display: flex;
 
   align-items: center;
 
   justify-content: center;
 
+  margin-left: 100px;
+
+  margin-bottom: 20px;
+
+  cursor: pointer;
+  font-size: 20px;
+  background-color: #f9e57c;
+
+  color: #fff;
+
+  border-radius: 5px;
+  margin-top: 50px;
+
+  width: 320px;
+
+  padding: 10px;
+
+  border: none;
+}
+
+a {
+  color: inherit;
+
+  text-decoration: none;
+}
+
+.already-have-account {
+  font-size: 15px;
+
+  color: #f9e57c;
+
+  margin: 100px;
+
+  cursor: pointer;
+}
+
+input.ng-touched.ng-invalid {
+  border-left: px solid red;
+}
+
+input.ng-valid.ng-touched {
+  border-left: 5px solid green;
+}
+
+.errors {
+  margin-left: 30px;
+
+  font-size: 12px;
+
+  color: red;
+}
+
+@media screen and (max-width: 600px) {
+  .image {
+    display: none;
+  }
+
+  .login-form {
+    flex: 1;
+
+    background-color: #82d78a;
+
+    margin: 50px;
+
+    height: 500px;
+
+    width: 300px;
+
+    border-radius: 10px;
+  }
+
+  .login-form input {
+    margin-left: 20px;
+
+    display: block;
+
+    padding: 5px;
+
+    width: 250px;
+
+    border: none;
+
+    border-radius: 10px;
+  }
+  .already-have-account {
+    font-size: 15px;
+
+    color: #f9e57c;
+
+    margin: 30px;
+
+    cursor: pointer;
+  }
+
+  .login-form button {
+    display: flex;
+
+    align-items: center;
+
+    justify-content: center;
+
     margin-left: 100px;
 
     margin-bottom: 20px;
 
-
     cursor: pointer;
-    font-size: 20px;
-    background-color: #F9E57C;
+    font-size: 14px;
+    background-color: #f9e57c;
 
     color: #fff;
 
-   
     border-radius: 5px;
     margin-top: 50px;
 
-    width: 320px;
+    width: 150px;
 
     padding: 10px;
 
     border: none;
-}
-
-
-a{
-    color: inherit;
-
-    text-decoration: none;
-}
-
-.already-have-account{
-
-    font-size: 15px;
-
-    color: #F9E57C;
-
-    margin: 100px;
-
-    cursor: pointer;
-}
-
-input.ng-touched.ng-invalid{
-
-    border-left: px solid red;
-}
-
-input.ng-valid.ng-touched{
-
-    border-left: 5px solid green;
-
-
-}
-
-.errors{
-
-    margin-left: 30px;
-
-    font-size: 12px;
-
-    color: red;
-}
-
-@media screen and (max-width: 600px){
-
-    .image{
-
-        display: none;
-    }
-
-    .login-form{
-
-        flex: 1;
-    
-        background-color: #82D78A;
-    
-    
-        margin: 50px;
-    
-        height: 500px;
-    
-        width: 300px;
-    
-        border-radius: 10px;
-    }
-
-
-    .login-form input{
-
-        margin-left: 20px;
-    
-        display: block;
-    
-        padding: 5px;
-    
-        width: 250px;
-    
-        border: none;
-    
-        border-radius: 10px;
-    }
-    .already-have-account{
-
-        font-size: 15px;
-    
-        color: #F9E57C;
-    
-        margin: 30px;
-    
-        cursor: pointer;
-    }
-
-
-    .login-form button{
-
-
-        display: flex;
-      
-        align-items: center;
-      
-        justify-content: center;
-      
-          margin-left: 100px;
-      
-          margin-bottom: 20px;
-      
-      
-          cursor: pointer;
-          font-size: 14px;
-          background-color: #F9E57C;
-      
-          color: #fff;
-      
-         
-          border-radius: 5px;
-          margin-top: 50px;
-      
-          width: 150px;
-      
-          padding: 10px;
-      
-          border: none;
-      }
-      
+  }
 }
