--- a/SendIT/src/app/components/about/about.component.css
+++ b/SendIT/src/app/components/about/about.component.css
@@ -1,147 +1,119 @@
-.about{
+.about {
+  display: flex;
 
-    display: flex;
-
-    align-items: center;
-    
+  align-items: center;
 }
 
+a {
+  color: inherit;
 
-a{
-
-    color: inherit;
-
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.process{
+.process {
+  flex: 1;
 
-    flex: 1;
+  background-color: #f0d95d;
 
-    background-color: #F0D95D;
+  height: 450px;
+  margin: 30px;
 
-    height: 450px;
-    margin: 30px;
+  display: flex;
 
-    
-
-    display: flex;
-
-    align-items: center;
-    
+  align-items: center;
 }
 
-.benefits{
+.benefits {
+  flex: 1;
 
-    flex: 1;
+  color: #6f6767;
 
-    color: #6F6767;
+  display: flex;
 
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.benefits li {
+  margin: 30px;
+}
+
+.benefits button {
+  background-color: #d9d9d9;
+
+  cursor: pointer;
+
+  padding: 5px;
+
+  width: 100px;
+
+  border: none;
+}
+
+.steps {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  margin-left: 50px;
+}
+
+.steps h3 {
+  margin: 50px;
+}
+.steps span {
+  margin-bottom: 30px;
+}
+
+.notifications {
+  background-color: #82d78a;
+
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  height: 300px;
+  width: 200px;
+  border-radius: 10px;
+
+  color: #fff;
+}
+
+.notifications span {
+  width: 80%;
+}
+
+@media screen and (max-width: 600px) {
+  .process {
+    margin: 20px;
+
+    font-size: 12px;
+  }
+
+  .about {
     display: flex;
 
     flex-direction: column;
 
     align-items: center;
+  }
 
-    
-}
+  .benefits {
+    flex: 1;
 
-.benefits li{
-
-    margin: 30px;
-}
-
-.benefits button{
-
-    background-color: #D9D9D9;
-
-    cursor: pointer;
-
-    padding: 5px;
-
-    width: 100px;
-
-    border: none;
-}
-
-.steps{
+    color: #6f6767;
 
     display: flex;
+
     flex-direction: column;
-    color: #fff;
+
+    font-size: 12px;
 
     align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    margin-left: 50px;
-}
-
-.steps h3{
-
-    margin: 50px;
-}
-.steps span{
-
-    margin-bottom: 30px;
-}
-
-.notifications{
-
-    background-color: #82D78A;
-
-    display: flex;
-
-    align-items: center;
-    justify-content: center;
-
-    height: 300px;
-    width: 200px;
-    border-radius: 10px;
-
-    
-    color: #fff;
-}
-
-.notifications span{
-
-    width: 80%;
-}
-
-@media screen and (max-width: 600px){
-
-
-    .process{
-
-        margin: 20px;
-
-        font-size: 12px;
-    }
-
-    .about{
-
-        display: flex;
-
-        flex-direction: column;
-    
-        align-items: center;
-        
-    }
-
-    .benefits{
-
-        flex: 1;
-    
-        color: #6F6767;
-    
-        display: flex;
-    
-        flex-direction: column;
-
-        font-size: 12px;
-    
-        align-items: center;
-    
-        
-    }
-
+  }
 }
