--- a/SendIT/src/app/components/home/home.component.css
+++ b/SendIT/src/app/components/home/home.component.css
@@ -1,98 +1,194 @@
+.home {
+  display: flex;
 
+  align-items: center;
 
-.home{
+  justify-content: space-between;
+}
 
+.image {
+  flex: 1;
 
+  display: flex;
+
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.image img {
+  height: 400px;
+
+  width: 500px;
+
+  object-fit: contain;
+}
+
+.description {
+  flex: 1;
+
+  display: flex;
+
+  flex-direction: column;
+
+  align-items: center;
+
+  background-color: #82d78a;
+
+  height: 450px;
+  width: 300px;
+
+  margin-top: 50px;
+
+  margin-right: 100px;
+
+  border-radius: 10px;
+}
+
+.description h2 {
+  color: #fff;
+
+  margin: 20px;
+
+  width: 70%;
+}
+
+.description span {
+  color: #fff;
+
+  font-size: 20px;
+
+  margin: 30px;
+
+  width: 70%;
+}
+
+.description button {
+  width: 350px;
+
+  background-color: #f0d95d;
+
+  color: #fff;
+  border: none;
+
+  padding: 10px;
+
+  font-size: 20px;
+
+  margin: 50px;
+
+  cursor: pointer;
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: space-evenly;
+}
+
+.noalternate {
+  width: 300px;
+
+  padding: 10px;
+
+  border: none;
+
+  background-color: #82d78a;
+
+  color: #fff;
+
+  font-size: 25px;
+
+  cursor: pointer;
+}
+
+.alternate {
+  width: 300px;
+
+  padding: 10px;
+
+  border: none;
+
+  background-color: #82d78a;
+
+  color: #fff;
+
+  font-size: 25px;
+
+  cursor: pointer;
+
+  animation: progress 2s ease infinite alternate;
+}
+
+@keyframes progress {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .home {
     display: flex;
 
     align-items: center;
-
-    justify-content: space-between;
-
-
-}
-
-.image{
-
-    flex: 1;
-
-    display: flex;
 
     flex-direction: column;
+  }
 
-    align-items: center;
-}
+  .image img {
+    height: 200px;
 
-
-
-.image img{
-
-    height: 400px;
-
-    width: 500px;
-    
-    object-fit: contain;
-}
-
-.description{
-
-    flex: 1;
-
-    display: flex;
-
-    flex-direction: column;
-
-    align-items: center;
-
-    background-color: #82D78A;
-
-
-
-    height: 450px;
     width: 300px;
 
-    margin-top: 50px;
+    object-fit: contain;
+  }
 
-    margin-right: 100px;
+  .description {
+    flex: 1;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
+    background-color: #82d78a;
+
+    margin: 20px;
+
+    height: 300px;
+    width: 300px;
 
     border-radius: 10px;
-}
+  }
 
-.description h2{
-
-
+  .description span {
     color: #fff;
+
+    font-size: 13px;
 
     margin: 20px;
 
     width: 70%;
-}
+  }
 
-.description span{
+  .description button {
+    width: 200px;
 
-    color: #fff;
-
-    font-size: 20px;
-
-    margin: 30px;
-
-    width: 70%;
-}
-
-.description button{
-
-    width: 350px;
-
-    background-color: #F0D95D;
+    background-color: #f0d95d;
 
     color: #fff;
     border: none;
 
     padding: 10px;
 
-    font-size: 20px;
+    font-size: 14px;
 
-    margin: 50px;
+    margin: 20px;
 
     cursor: pointer;
 
@@ -101,150 +197,5 @@
     align-items: center;
 
     justify-content: space-evenly;
-
-    
-}
-
-
-.noalternate{
-
-    width: 300px;
-
-    padding: 10px;
-
-    border: none;
-
-    background-color: #82D78A;
-
-    color: #fff;
-
-    font-size: 25px;
-
-    cursor: pointer;
-}
-
-
-.alternate{
-
-    width: 300px;
-
-    padding: 10px;
-
-    border: none;
-
-    background-color: #82D78A;
-
-    color: #fff;
-
-    font-size: 25px;
-
-    cursor: pointer;
-
-    animation: progress 2s ease infinite alternate;
-
-}
-
-@keyframes progress {
-
-
-    from{
-
-
-        opacity: 0;
-    }
-
-    to{
-
-
-        opacity: 1;
-
-    }
-    
-}
-
-@media screen and (max-width: 600px){
-
-    .home{
-
-
-        display: flex;
-    
-        align-items: center;
-    
-        flex-direction: column;
-    
-    
-    }
-
-
-
-    .image img{
-
-        height: 200px;
-    
-        width: 300px;
-        
-        object-fit: contain;
-    }
-
-    .description{
-
-        flex: 1;
-    
-        display: flex;
-    
-        flex-direction: column;
-    
-        align-items: center;
-    
-        background-color: #82D78A;
-    
-    
-        margin: 20px;
-    
-        height: 300px;
-        width: 300px;
-    
-    
-    
-        border-radius: 10px;
-    }
-
-    .description span{
-
-        color: #fff;
-    
-        font-size: 13px;
-    
-        margin: 20px;
-    
-        width: 70%;
-    }
-    
-    .description button{
-    
-        width: 200px;
-    
-        
-        background-color: #F0D95D;
-    
-        color: #fff;
-        border: none;
-    
-        padding: 10px;
-    
-        font-size: 14px;
-    
-        margin: 20px;
-    
-        cursor: pointer;
-    
-        display: flex;
-    
-        align-items: center;
-    
-        justify-content: space-evenly;
-    
-        
-    }
+  }
 }
