--- a/SendIT/src/app/components/navbar/navbar.component.css
+++ b/SendIT/src/app/components/navbar/navbar.component.css
@@ -1,47 +1,68 @@
-.navbar{
+.navbar {
+  display: flex;
 
-    display: flex;
+  align-items: center;
 
-    align-items: center;
+  justify-content: space-between;
 
-    justify-content: space-between;
+  height: 70px;
 
-    height: 70px;
-
-    background-color: #A1F5B3;
+  background-color: #a1f5b3;
 }
 
+.logo {
+  font-size: 30px;
 
-.logo{
+  color: #fff;
 
-font-size: 30px;
+  font-weight: 500;
 
-color: #fff;
-
-font-weight: 500;
-
-
-margin-left: 100px;
-
-
-
-
+  margin-left: 100px;
 }
 
-
-a{
-
-
-    color: inherit;
-    text-decoration: none;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
+.signup {
+  background-color: #d78287;
 
-.signup{
+  padding: 10px;
 
-    background-color: #D78287;
+  border: none;
 
-    padding: 10px;
+  margin-right: 10px;
+
+  color: #fff;
+
+  font-weight: 400;
+
+  width: 100px;
+
+  cursor: pointer;
+}
+
+.login {
+  margin-right: 100px;
+
+  font-size: 20px;
+
+  cursor: pointer;
+  color: #fff;
+}
+
+@media screen and (max-width: 600px) {
+  .logo {
+    font-size: 20px;
+
+    margin-left: 20px;
+  }
+
+  .signup {
+    background-color: #d78287;
+
+    padding: 5px;
 
     border: none;
 
@@ -49,68 +70,19 @@ a{
 
     color: #fff;
 
-    font-weight: 400;
+    font-weight: 300;
 
-    width: 100px;
+    width: 50px;
 
     cursor: pointer;
-}
+  }
 
+  .login {
+    margin-right: 20px;
 
-
-
-
-.login{
-
-    margin-right: 100px;
-
-    font-size: 20px;
+    font-size: 13px;
 
     cursor: pointer;
     color: #fff;
-}
-
-
-
-@media screen and (max-width: 600px){
-
-    
-
-    .logo{
-
-        font-size: 20px;
-
-        margin-left: 20px;
-
-    }
-
-    .signup{
-
-        background-color: #D78287;
-    
-        padding: 5px;
-    
-        border: none;
-    
-        margin-right: 10px;
-    
-        color: #fff;
-    
-        font-weight: 300;
-    
-        width: 50px;
-    
-        cursor: pointer;
-    }
-
-    .login{
-
-        margin-right: 20px;
-    
-        font-size: 13px;
-    
-        cursor: pointer;
-        color: #fff;
-    }
-    
+  }
 }
