--- a/SendIT/src/app/admin/admin.component.html
+++ b/SendIT/src/app/admin/admin.component.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="search">
-        <input type="text" placeholder="search" [(ngModel)]="filteredText" />
+        <input type="text" placeholder="search parcel by track number" [(ngModel)]="filteredText" />
       </div>
 
       <div class="parcels" *ngIf="parcels$ | async as parcels">
