--- a/SendIT/src/app/users/parcels/parcels.component.html
+++ b/SendIT/src/app/users/parcels/parcels.component.html
@@ -76,7 +76,7 @@
         <div class="orders-item" *ngFor="let parcel of parcels | paginate: { itemsPerPage: 4, currentPage: p } | filter: selectedOption ">
             <span>4571818181</span>
 
-            <span>{{parcel.id}}</span>
+            <span>Nairobi</span>
 
             <span>Kisumu</span>
 
