--- a/SendIT/src/app/admin/admin.component.html
+++ b/SendIT/src/app/admin/admin.component.html
@@ -61,7 +61,7 @@
       <div class="head">
         <span>Name</span>
 
-        <span>Parcel ID</span>
+        <span>Track ID</span>
 
         <span>Location</span>
 
@@ -81,13 +81,13 @@
           class="parcel-item"
           *ngFor="
             let parcel of parcels
-              | paginate: { itemsPerPage: 4, currentPage: p }
+              | paginate: { itemsPerPage: 6, currentPage: p }
               | search: filteredText
           "
         >
           <span>James</span>
 
-          <span>56717178</span>
+          <span>{{parcel.trackNumber}}</span>
 
           <span>Nairobi</span>
 
