working on authentication

--- a/Backend/templates/welcomeuser.ejs
+++ b/Backend/templates/welcomeuser.ejs
@@ -58,6 +58,8 @@
                 
                   src="https://img.freepik.com/free-vector/delivery-staff-ride-motorcycles-shopping-concept_1150-34879.jpg?w=2000"
                   alt="image"
+                  height="500px"
+                  width="500px"
                 />
                 <h2 style="font-size: 35px">Welcome <%=name%> to SendIT</h2>
 
@@ -70,7 +72,7 @@
                     max-width: 500px;
                   "
                 >
-                  <a href="https://localhost:4200/">website</a>
+                  <a href="https://localhost:4200/">Visit our website</a>
                 </p>
               </td>
             </tr>
