worked on authentication and procedure

--- a/SendIT/src/app/users/parcels/parcels.component.html
+++ b/SendIT/src/app/users/parcels/parcels.component.html
@@ -62,9 +62,9 @@
         <div class="select">
 
 
-            <select name="from" id="" (change)="change($event)"  [(ngModel)] ="selectedOption">
+            <select name="from" id="" (change)="change($event)" >
 
-                <option value="" selected disabled >Filter</option>
+                <option value="" selected disabled >Select</option>
                 <option value="from" name="from">From me</option>
                 <option value="to" name="to">To me</option>
             </select>
